--- a/TmShuttle/TmShuttle.csproj
+++ b/TmShuttle/TmShuttle.csproj
@@ -64,6 +64,7 @@
     </Reference>
     <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Management" />
     <Reference Include="System.Web" />
     <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Xml.Linq" />
@@ -80,6 +81,7 @@
     <Compile Include="APIClass.cs" />
     <Compile Include="ClassesModel.cs" />
     <Compile Include="ClassesDAL.cs" />
+    <Compile Include="ComputerInfo.cs" />
     <Compile Include="FrmAutoMode.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -117,6 +119,13 @@
     <Compile Include="FrmGlobalConfig.Designer.cs">
       <DependentUpon>FrmGlobalConfig.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmRegister.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmRegister.Designer.cs">
+      <DependentUpon>FrmRegister.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Hasher.cs" />
     <Compile Include="IniConfig.cs" />
     <Compile Include="FrmMannualMode.cs">
       <SubType>Form</SubType>
@@ -127,6 +136,8 @@
     <Compile Include="MP3.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RegisterUtility.cs" />
+    <Compile Include="RegistryAccess.cs" />
     <Compile Include="RingBellDAL.cs" />
     <Compile Include="RingBellModel.cs" />
     <EmbeddedResource Include="FrmAutoMode.resx">
@@ -149,6 +160,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FrmMannualMode.resx">
       <DependentUpon>FrmMannualMode.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmRegister.resx">
+      <DependentUpon>FrmRegister.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Properties\Resources.resx">
