--- a/TmShuttle/App.config
+++ b/TmShuttle/App.config
@@ -5,6 +5,7 @@
     <add key="SystemCaption" value="豆豆 幼儿园智能接送管理系统" />
     <add key="ConnectionString" value="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=|DataDirectory|\home.mdb" />
     <add key="ClientSettingsProvider.ServiceUri" value="" />
+    <add key="HelpInfo" value="请发邮件到：Ygf3921980@yahoo.com.cn, 云高飞，谢谢"/>
   </appSettings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" />
