--- a/TmShuttle/TmShuttle.csproj
+++ b/TmShuttle/TmShuttle.csproj
@@ -44,6 +44,9 @@
   <PropertyGroup>
     <SignManifests>false</SignManifests>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>logo.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="ComponentFactory.Krypton.Design">
       <HintPath>F:\ReferenceAssemblies\ComponentFactory.Krypton.Design.dll</HintPath>
@@ -82,6 +85,9 @@
     <Compile Include="ClassesModel.cs" />
     <Compile Include="ClassesDAL.cs" />
     <Compile Include="ComputerInfo.cs" />
+    <Compile Include="ExtendedControl.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="FrmAutoMode.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -134,6 +140,7 @@
       <DependentUpon>FrmMannualMode.cs</DependentUpon>
     </Compile>
     <Compile Include="MP3.cs" />
+    <Compile Include="NotificationManager.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RegisterUtility.cs" />
@@ -200,6 +207,12 @@
       <Project>{A8F3D10F-DCE3-4EF5-B352-14AF048212BC}</Project>
       <Name>ShadowLabel</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="home.mdb">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="logo.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
